# rust-zero2prod

./: .gitignore  Cargo.toml  README.md
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
